white space fixing

--- a/src/styles/Style.scss
+++ b/src/styles/Style.scss
@@ -7538,7 +7538,7 @@ section.key_features .flex.justify-center.mt-10 {
 /* FAQ */
 .faq_sec {
   width: 100%;
-  min-height: 100vh;
+  /*min-height: 100vh;*/
   height: 100%;
   display: flex;
   align-items: center;
